<resources>
    <string name="app_name">NEST</string>

    <string name="invest">投资</string>
    <string name="borrow">借币</string>
    <string name="contract">合约</string>
    <string name="wallet">钱包</string>

    <string name="nest">NEST</string>
    <string name="my_contract">我的合约</string>
    <string name="my_wallet">我的钱包</string>

    <string name="mnemonic">助记词</string>
    <string name="keystore">keystore</string>
    <!--dialog-->
    <string name="input_wallet_psd">请输入钱包密码</string>
    <string name="input_wallet_psd_warn">为了验证您的身份，请输入钱包密码</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="i_know">我知道了</string>
    <string name="deploy_warn">部署合约所需费用将会从您钱包的相应资产类型余额中直接打入合约，请确保您的钱包中有足够的余额\n若钱包余额不足，请从其他钱包转入</string>
    <string name="deploy_contract_cost">部署合约费用</string>
    <string name="dont_screenshot">请勿截图</string>
    <string name="dont_screenshot_warn">请确保四周无人及无任何摄像头\n勿用截图或拍照保存，有被盗风险</string>
    <string name="asset_profile">资产简介</string>
    <string name="project_name">项目名称</string>
    <string name="brief_introduction">简介</string>
    <string name="token_address">Token地址：</string>
    <string name="qunqun_describe">QunQun是基于区块链的激励型社区平台。在QunQun上，人们可以无需任何编码和部署即可轻松创建属于自己的主题社区。</string>
    <string name="select_project">查询项目</string>
    <string name="copy_token_address">复制Token地址</string>
    <string name="sure_stop_contract">确定终止合约</string>
    <string name="stop_contract_warn">合约已部署成功，若中途终止以支付宝的Gas不会被返还</string>
    <string name="no_create_wallet">您还没有创建钱包</string>
    <string name="no_create_wallet_warn">请您创建或导入钱包后继续使用NEST的投资与借币服务</string>
    <string name="create_new_wallet">创建新的钱包</string>
    <string name="import_wallet">导入钱包</string>
    <string name="create_wallet_warn_1">* 密码用于保护您的私钥以及交易授权，强度非常重要</string>
    <string name="create_wallet_warn_2">* NEST 不存储任何用户密码，也无法帮忙找回，请务必记牢</string>
    <string name="set_password">请设置密码</string>
    <string name="reinput_psd">请重复密码</string>
    <string name="agreement">我已经阅读并同意用户服务协议及隐私条款</string>
    <string name="create_wallet">创建钱包</string>
    <string name="backup_wallet">备份钱包</string>
    <string name="backup_1">1、备份钱包：</string>
    <string name="backup_2">2、使用钱包：</string>
    <string name="backup_warn">请立即备份您的钱包</string>
    <string name="backup_wallet_1_des">导出【助记词】之后，用纸清晰抄写，并保存到安全的地方，请不要保存在网络上。 当您遗忘密码或丢失私钥时，可以使用助记词回复钱包！</string>
    <string name="backup_wallet_2_des">可以尝试转入、转出小额资产并开始使用</string>
    <string name="immediately_backup">立即备份</string>
    <string name="backup_mnemonic">备份助记词</string>
    <string name="mnemonic_warn">助记词用于恢复钱包或重置钱包密码\n请将其清晰准确抄在纸上，并安全保存在只有你知道的地方！</string>
    <string name="mnemonic_next">我已正确抄写，下一步</string>
    <string name="please_copy_mnemonic">请抄写您的助记词</string>
    <string name="title_activity_confirm_mnemonic">ConfirmMnemonicAct</string>
    <string name="confirm_mnemonic">确认助记词</string>
    <string name="validate_mnemonic">请验证您的助记词</string>
    <string name="confirm_mnemonic_warn">为了确保您的助记词备份正确，请按照抄写顺序点击助记词</string>
    <string name="reset">重置</string>
    <string name="add_assets">添加资产</string>
    <string name="select_index">选择索引</string>
    <string name="wallet_create_fail">钱包创建失败</string>
    <string name="mnemonic_validate_error">验证失败，请确认您的助记词顺序是否正确</string>
    <string name="mnemonic_validate_success">验证成功，请妥善保管好好您的助记词</string>
    <string name="validate_success">验证成功</string>
    <string name="wallet_manager">钱包管理</string>
    <string name="update_psd">修改密码</string>
    <string name="other_setting">其他设置</string>
    <string name="export_keystore">导出 Keystore</string>
    <string name="language_switch">多语言选择</string>
    <string name="simplified_chinese">简体中文</string>
    <string name="delete_wallet">删除钱包</string>
    <string name="sure_delete_wallet">确定删除钱包</string>
    <string name="delete_wallet_warn">此操作无法撤销！\n删除后可以重新输入，请确保您已备份好钱包</string>
    <string name="delete">删除</string>
    <string name="english">English</string>
    <string name="complete">完成</string>
    <string name="language_setting">多语言设置</string>
    <string name="second_psd_not_match">两次密码不一致</string>
    <string name="please_input_token">请输入合约地址或Token名称</string>

    <string name="input_keystore_password">请输入Keystore密码</string>
    <string name="input_keystore_hint">请直接复制Keystore文件内容至输入框</string>
    <string name="start_input">开始导入</string>
    <string name="input_mnemonic_hint">请输入助记词，并按空格分隔单词</string>
    <string name="agreement_1">我已经阅读并同意</string>
    <string name="agreement_2">用户服务协议及隐私条款</string>
    <string name="keystore_file">Keystore 文件</string>
    <string name="QR_code">二维码</string>
    <string name="save_offline">离线保存</string>
    <string name="save_prompt">请将 Keystore 文件复制到安全、离线的地方保存\n请不要把 Keystore 文件保存到记事本、邮箱、网盘、聊天工具\n等，会有很大风险</string>
    <string name="not_use_network_transmission">请不要使用网络传输</string>
    <string name="transmission_prompt">请不要通过网络工具传输 Keystore 文件，若被黑客获取将会对您\n造成不可挽回的损失\n建议使用离线设备，通过扫描二维码的方式</string>
    <string name="password_safe">密码保险箱</string>
    <string name="safe_prompt">建议使用安全等级更高的密码管理工具来保存 Keystore 文件</string>
    <string name="copy_keystore">复制 Keystore</string>
    <string name="safe_scan">请在安全环境下扫描</string>
    <string name="scan_prompt">请确保四周无人及摄像头\n二维码禁止保存、截图、拍照\n仅限在安全环境下使用，二维码一旦被他人获取将会对您的资\n产造成不可挽回的损失</string>
    <string name="show_qr_code">显示二维码</string>
    <!--钱包-->

</resources>
