<?xml version="1.0" encoding="utf-8"?>
<layout >
    <data>
    </data>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="12dp"
            android:textSize="14sp"
            android:text="@string/save_offline"
            android:textColor="@color/clr_111111"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:textSize="12sp"
            android:text="@string/save_prompt"
            android:textColor="@color/clr_999999"
            android:lineSpacingExtra="2dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="12dp"
            android:textSize="14sp"
            android:text="@string/not_use_network_transmission"
            android:textColor="@color/clr_111111"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:textSize="12sp"
            android:text="@string/transmission_prompt"
            android:textColor="@color/clr_999999"
            android:lineSpacingExtra="2dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="12dp"
            android:textSize="14sp"
            android:text="@string/password_safe"
            android:textColor="@color/clr_111111"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:textSize="12sp"
            android:text="@string/safe_prompt"
            android:textColor="@color/clr_999999"
            android:lineSpacingExtra="2dp"/>

        <TextView
            android:id="@+id/show_keystore"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            android:background="@drawable/frame_corners_bg"
            android:elevation="2dp"
            android:gravity="top"
            android:padding="12dp"
            android:textSize="10sp"
            android:textColor="@color/clr_CCCCCC"/>

        <Button
            android:id="@+id/btn_copy"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            android:background="@drawable/gradient_oval_btn"
            android:text="@string/export_keystore"
            android:textColor="@android:color/white"
            android:textAllCaps="false"/>

    </LinearLayout>

</layout>
