<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <!--<variable-->
        <!--name="user"-->
        <!--type="com.lianer.nest.User" />-->
    </data>

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".wallet.WalletGuideAct">

        <com.lianer.nest.custom.TitlebarView
            android:id="@+id/titlebar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:background="@android:color/white"
            app:centerTitle="@string/wallet"
            app:leftDrawble="@drawable/back_left" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_50"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_30"
            android:text="@string/no_create_wallet"
            android:textColor="@color/clr_111111"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_create_wallet_warn"
            android:textColor="@color/clr_111111"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/create_wallet"
            android:layout_width="@dimen/dp_300"
            android:layout_height="@dimen/dp_50"
            android:layout_marginTop="@dimen/dp_80"
            android:layout_marginBottom="@dimen/dp_20"
            android:background="@drawable/gradient_oval_btn"
            android:gravity="center"
            android:text="@string/create_new_wallet"
            android:textColor="@color/clr_F5F5F5"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/import_wallet"
            android:layout_width="@dimen/dp_300"
            android:layout_height="@dimen/dp_50"
            android:background="@drawable/gradient_oval_btn"
            android:gravity="center"
            android:text="@string/import_wallet"
            android:textColor="@color/clr_F5F5F5"
            android:textSize="14sp" />


    </LinearLayout>

</layout>