<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.lianer.nest.custom.TitlebarView
            android:id="@+id/titlebar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:background="@android:color/white"
            app:centerTitle="@string/backup_wallet" />

        <LinearLayout
            android:layout_width="@dimen/dp_300"
            android:layout_height="@dimen/dp_100"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_20"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/wallet_true"
                android:paddingLeft="@dimen/dp_20"
                android:paddingStart="@dimen/dp_20"
                android:paddingRight="@dimen/dp_20"
                android:paddingEnd="@dimen/dp_20"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher"
                />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/backup_warn"
            android:textColor="@color/clr_111111"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/dp_20"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backup_1"
            android:textColor="@color/clr_111111"
            android:textSize="14sp"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_20"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backup_wallet_1_des"
            android:textColor="@color/clr_999999"
            android:textSize="12sp"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_20"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backup_2"
            android:textColor="@color/clr_111111"
            android:textSize="14sp"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_20"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backup_wallet_2_des"
            android:textColor="@color/clr_999999"
            android:textSize="12sp"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_20"/>

        <TextView
            android:id="@+id/backup_wallet"
            android:layout_width="@dimen/dp_300"
            android:layout_height="@dimen/dp_50"
            android:layout_marginTop="@dimen/dp_100"
            android:background="@drawable/gradient_oval_btn"
            android:gravity="center"
            android:text="@string/immediately_backup"
            android:textColor="@color/clr_F5F5F5"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

</layout>