<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.lianer.nest.custom.TitlebarView
            android:id="@+id/titlebar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:background="@android:color/white"
            app:centerTitle="@string/backup_mnemonic"
            app:leftDrawble="@drawable/back_left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_30"
            android:text="@string/please_copy_mnemonic"
            android:textColor="@color/clr_111111"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_25"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="@dimen/dp_5"
            android:text="@string/mnemonic_warn"
            android:textColor="@color/clr_999999"
            android:textSize="14sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_mnemonic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dp_20"
            android:paddingRight="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_30"
            />

        <TextView
            android:id="@+id/backup_mnemonic"
            android:layout_width="@dimen/dp_300"
            android:layout_height="@dimen/dp_50"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_40"
            android:background="@drawable/gradient_oval_btn"
            android:gravity="center"
            android:text="@string/mnemonic_next"
            android:textColor="@color/clr_F5F5F5"
            android:textSize="18sp" />

    </LinearLayout>

</layout>