<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dp_300"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_circle_oval_bg"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/asset_profile"
        android:textColor="@color/clr_111111"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_15"
        android:text="项目名称：QunQun | 简称：QUN"
        android:textColor="@color/clr_111111"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_20"
        android:gravity="center_horizontal"
        android:text="@string/token_address"
        android:textColor="@color/clr_111111"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_5"
        android:gravity="center_horizontal"
        android:paddingLeft="@dimen/dp_65"
        android:paddingRight="@dimen/dp_65"
        android:text="0xcac2ea35f9d276f35a3d5fd4aa22cfb6c9d9cd36"
        android:textColor="@color/clr_111111"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:gravity="center_horizontal"
        android:paddingLeft="@dimen/dp_10"
        android:paddingRight="@dimen/dp_10"
        android:text="@string/qunqun_describe"
        android:textColor="@color/clr_111111"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/clr_DDDDDD" />

    <TextView
        android:id="@+id/select_project"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="@dimen/dp_10"
        android:paddingTop="@dimen/dp_10"
        android:text="@string/select_project"
        android:textColor="@color/clr_059EFF"
        android:textSize="16sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/clr_DDDDDD" />

    <TextView
        android:id="@+id/copy_token_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="@dimen/dp_10"
        android:paddingTop="@dimen/dp_10"
        android:text="@string/copy_token_address"
        android:textColor="@color/clr_059EFF"
        android:textSize="16sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/clr_DDDDDD" />

    <TextView
        android:id="@+id/i_know"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="@dimen/dp_10"
        android:paddingTop="@dimen/dp_10"
        android:text="@string/i_know"
        android:textColor="@color/clr_059EFF"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>