<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data
        ></data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/clr_F5F5F5"
        >

        <com.lianer.nest.custom.TitlebarView
            android:id="@+id/titlebar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:background="@android:color/white"
            app:centerTitle="@string/wallet_manager"
            app:leftDrawble="@drawable/back_left" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/white"
            android:layout_marginTop="@dimen/dp_1"
            >

            <RelativeLayout
                android:id="@+id/update_psd"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/dp_20"
                android:paddingRight="@dimen/dp_20">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/update_psd"
                    android:textSize="16sp"
                    android:textColor="@color/clr_111111"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/back_right"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/clr_EBEBEB"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginStart="@dimen/dp_20"
                />

            <RelativeLayout
                android:id="@+id/export_keystore"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/dp_20"
                android:paddingRight="@dimen/dp_20">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/export_keystore"
                    android:textSize="16sp"
                    android:textColor="@color/clr_111111"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/back_right"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    />
            </RelativeLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other_setting"
            android:textColor="@color/clr_999999"
            android:textSize="12sp"
            android:layout_margin="@dimen/dp_20"
            />

        <RelativeLayout
            android:id="@+id/language_switch"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dp_20"
            android:paddingRight="@dimen/dp_20"
            android:background="@android:color/white"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language_switch"
                android:textSize="16sp"
                android:textColor="@color/clr_111111"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/back_right"
                android:drawableRight="@drawable/back_right"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/simplified_chinese"
                android:drawablePadding="@dimen/dp_10"
                />
        </RelativeLayout>

        <TextView
            android:id="@+id/delete_wallet"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:text="@string/delete_wallet"
            android:textSize="16sp"
            android:textColor="@color/clr_F5222D"
            android:gravity="center"
            android:layout_marginTop="@dimen/dp_70"
            android:background="@android:color/white"
            />


    </LinearLayout>

</layout>