<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:bind="http://schemas.android.com/tools">

    <data>


    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_mnemonic"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            android:background="@drawable/frame_corners_bg"
            android:elevation="2dp"
            android:gravity="top"
            android:hint="@string/input_mnemonic_hint"
            android:imeOptions="actionNext"
            android:inputType="text|textMultiLine"
            android:padding="12dp"
            android:textSize="14sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="16dp">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:drawableLeft="@drawable/password_lock"
                android:drawablePadding="10dp"
                android:hint="@string/set_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLength="32"
                android:padding="10dp"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_alignParentBottom="true"
                android:background="@color/clr_EBEBEB" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="16dp">

            <EditText
                android:id="@+id/et_re_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:drawableLeft="@drawable/password_lock"
                android:drawablePadding="10dp"
                android:hint="@string/reinput_psd"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLength="32"
                android:padding="10dp"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_alignParentBottom="true"
                android:background="@color/clr_EBEBEB" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/selected_yes"
                android:drawablePadding="@dimen/dp_10"
                android:text="@string/agreement_1"
                android:textColor="@color/clr_999999"
                android:textSize="12sp" />
            <TextView
                android:id="@+id/user_agreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agreement_2"
                android:textColor="@color/clr_00BDFD"
                android:textSize="12sp"
                android:layout_marginLeft="4dp"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_unlock"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            android:background="@drawable/gradient_oval_btn"
            android:text="@string/start_input"
            android:textColor="@android:color/white" />

    </LinearLayout>

</layout>
