<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dp_300"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_circle_oval_bg"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/sure_delete_wallet"
        android:textColor="@color/clr_111111"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/dp_20"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/delete_wallet_warn"
        android:textColor="@color/clr_111111"
        android:textSize="14sp"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_10"
        android:paddingLeft="@dimen/dp_20"
        android:paddingRight="@dimen/dp_20"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="@dimen/dp_3"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/clr_DDDDDD"
        android:layout_marginTop="@dimen/dp_10"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_bottom_oval_bg"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/delete"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="@dimen/dp_10"
            android:paddingTop="@dimen/dp_10"
            android:text="@string/delete"
            android:textColor="@color/clr_F87962"
            android:textSize="16sp" />

        <View
            android:layout_width="@dimen/dp_1"
            android:layout_height="match_parent"
            android:background="@color/clr_DDDDDD"
            />

        <TextView
            android:id="@+id/cancel"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="@dimen/dp_10"
            android:paddingTop="@dimen/dp_10"
            android:text="@string/cancel"
            android:textColor="@color/clr_059EFF"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>